--- a/MauiApp1/pages/SignUpPage.xaml
+++ b/MauiApp1/pages/SignUpPage.xaml
@@ -2,14 +2,13 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiApp1.pages.SignUpPage"
-             Title="SignUpPage">
+             Title="">
     <VerticalStackLayout Padding="20" Spacing="10">
-        <Label Text="Create an Account" FontSize="Large" HorizontalOptions="Center" />
-
-        <Entry Placeholder="Email" />
-        <Entry Placeholder="Password" IsPassword="True" />
-        <Button Text="Sign Up" Clicked="OnSignUpClicked" HorizontalOptions="Fill" />
-
-        <Button Text="Back to Login" Clicked="OnBackClicked" HorizontalOptions="Fill" />
+        <Label Text="Регистрация" FontSize="Large" HorizontalOptions="Center" />
+        <Entry Text="{Binding Username}" Placeholder="Имя" />
+        <Entry Text="{Binding Email}" Placeholder="Email" />
+        <Entry Text="{Binding Password}" Placeholder="Пароль" IsPassword="True" />
+        <Button Command="{Binding SignUpCommand}" Text="Зарегистрироваться" HorizontalOptions="Fill" />
+        <Button Command="{Binding NavigateSignInCommand}" Text="Уже есть аккаунт? Войдите"  HorizontalOptions="Fill" />
     </VerticalStackLayout>
 </ContentPage>
